// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingBlockEnd renders 0 1`] = `
Array [
  .c0 {
  padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders function 1`] = `
Array [
  .c0 {
  padding-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders negative number 1`] = `
Array [
  .c0 {
  padding-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  padding-block-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  padding-block-end: July;
}

@media May {
  .c0 {
    padding-block-end: August;
  }
}

@media April {
  .c0 {
    padding-block-end: September;
  }
}

@media January {
  .c0 {
    padding-block-end: November;
  }
}

@media April {
  .c0 {
    padding-block-end: August;
  }
}

@media June {
  .c0 {
    padding-block-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: July;
}

@media May {
  .c0 {
    padding-block-end: August;
  }
}

@media April {
  .c0 {
    padding-block-end: September;
  }
}

@media January {
  .c0 {
    padding-block-end: November;
  }
}

@media April {
  .c0 {
    padding-block-end: August;
  }
}

@media June {
  .c0 {
    padding-block-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block-end: November;
  }
}

@media April {
  .c0 {
    padding-block-end: January;
  }
}

@media January {
  .c0 {
    padding-block-end: December;
  }
}

@media April {
  .c0 {
    padding-block-end: April;
  }
}

@media June {
  .c0 {
    padding-block-end: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block-end: November;
  }
}

@media April {
  .c0 {
    padding-block-end: January;
  }
}

@media January {
  .c0 {
    padding-block-end: December;
  }
}

@media April {
  .c0 {
    padding-block-end: April;
  }
}

@media June {
  .c0 {
    padding-block-end: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    padding-block-end: July;
  }
}

@media April {
  .c0 {
    padding-block-end: August;
  }
}

@media January {
  .c0 {
    padding-block-end: September;
  }
}

@media April {
  .c0 {
    padding-block-end: November;
  }
}

@media June {
  .c0 {
    padding-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-block-end: July;
  }
}

@media April {
  .c0 {
    padding-block-end: August;
  }
}

@media January {
  .c0 {
    padding-block-end: September;
  }
}

@media April {
  .c0 {
    padding-block-end: November;
  }
}

@media June {
  .c0 {
    padding-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block-end: January;
  }
}

@media April {
  .c0 {
    padding-block-end: December;
  }
}

@media January {
  .c0 {
    padding-block-end: April;
  }
}

@media April {
  .c0 {
    padding-block-end: May;
  }
}

@media June {
  .c0 {
    padding-block-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block-end: January;
  }
}

@media April {
  .c0 {
    padding-block-end: December;
  }
}

@media January {
  .c0 {
    padding-block-end: April;
  }
}

@media April {
  .c0 {
    padding-block-end: May;
  }
}

@media June {
  .c0 {
    padding-block-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders postitive number 1`] = `
Array [
  .c0 {
  padding-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders string 1`] = `
Array [
  .c0 {
  padding-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlockEnd renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`paddingBlockEnd renders valid theme path 1`] = `
Array [
  .c0 {
  padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
